Easiest Problem/compiling_error.txt
C:\Users\Innocent\Documents\GitHub\SIG-COMP\Easiest Problem\easy.cpp: In function 'bool findP(int, int)':
C:\Users\Innocent\Documents\GitHub\SIG-COMP\Easiest Problem\easy.cpp:15:23: error: 'to_string' is not a member of 'std'
   std::string value = std::to_string(val);
                       ^
C:\Users\Innocent\Documents\GitHub\SIG-COMP\Easiest Problem\easy.cpp:18:26: error: request for member 'c_str' in 'value.std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator[]<char, std::char_traits<char>, std::allocator<char> >(((std::__cxx11::basic_string<char>::size_type)i))', which is of non-class type 'char'
     total+=atoi(value[i].c_str());
                          ^
C:\Users\Innocent\Documents\GitHub\SIG-COMP\Easiest Problem\easy.cpp:18:33: error: 'atoi' was not declared in this scope
     total+=atoi(value[i].c_str());
                                 ^
C:\Users\Innocent\Documents\GitHub\SIG-COMP\Easiest Problem\easy.cpp: In function 'int main()':
C:\Users\Innocent\Documents\GitHub\SIG-COMP\Easiest Problem\easy.cpp:38:17: error: 'count' cannot be used as a function
     cout<<count()<<endl;
                 ^
